@@ -1,0 +1,11 @@
+.TH YAPP 1 "23 September 2011" Linux "FPAC Operator's Manual"
+.SH NAME 
+yapp \- FPAC White Page Database server.
+.SH SYNOPSIS
+.B yapp
+.SH DESCRIPTION
+.LP
+.B yapp
+is an element of FPAC that handles YAPP file uploads & downloads.
+.SH AUTHOR
+Bernard Pidoux F6BVP <bernard.f6bvp@gmail.com>
